# Controlz

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  _config.yml  build.gradle  gradle-release.gradle  gradle.properties  gradlew.bat  release.sh  settings.gradle
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  ci.yml  release.yml
.github/workflows/: ci.yml  release.yml
FAQ/: howto_modify_add_custom_draweritems.md
app/: build.gradle
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/sentenz/controlz/: ActionBarActivity.kt  AdvancedActivity.kt  CollapsingToolbarActivity.kt  CompactHeaderDrawerActivity.kt  ControlActivity.kt  CrossfadeDrawerLayoutActvitiy.kt  CustomApplication.kt  DrawerActivity.kt  EmbeddedDrawerActivity.kt  FragmentActivity.kt  FullscreenDrawerActivity.kt  Listener.kt  MenuDrawerActivity.kt  MiniDrawerActivity.kt  MyAppGlideModule.kt  NavControllerActivity.kt  NfcActivity.kt  NfcReaderFragment.kt  NfcWriterFragment.kt  PaternosterActivity.kt  PersistentDrawerActivity.kt
app/src/main/java/com/sentenz/controlz/base/: BaseActivity.kt  BaseEvents.kt  BaseFragment.kt  BaseViewModel.kt
app/src/main/java/com/sentenz/controlz/data/: DrawerViewModel.kt
app/src/main/res/drawable/: ic_distribute_play_104dp.xml  ic_guides_104dp.xml  ic_keyboard_arrow_up_down_black_12dp.xml  ic_material_design_104dp.xml  ic_nfc_black_24dp.xml  ic_nfc_logo.xml
app/src/main/res/layout/: activity_control.xml  activity_drawer.xml  activity_mini_drawer.xml  activity_multi_sample.xml  activity_nav_controller.xml  activity_nfc.xml  activity_paternoster.xml  activity_persistent_drawer.xml  activity_sample_collapsing_toolbar.xml  activity_sample_crossfader.xml  fragment_control.xml  fragment_nfc_read.xml  fragment_nfc_write.xml
app/src/main/res/menu/: example_menu.xml  menu_tool.xml  nfc_menu.xml
app/src/main/res/navigation/: activity_nav_graph.xml  navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
distribution/open62541/include/: open62541.h
gen-libs/: build.gradle
gen-libs/src/main/cpp/: CMakeLists.txt
gen-libs/src/main/cpp/open62541/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
lib/HTextView/htextview-scale/src/main/: AndroidManifest.xml
lib/stt/: build.gradle
lib/stt/src/main/: AndroidManifest.xml
(+37 files in other folders)
